// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Head> when currentLocale="en-US" pushes tags into <head> and they matches with the previous snapshots 1`] = `
Array [
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <meta
    charSet="utf-8"
  />,
  <title>
    Kohei Asai
  </title>,
  <meta
    content="Kohei Asai's personal website. My experience, projects and bloggging."
    name="description"
  />,
  <link
    href="https://tests.kohei.dev/?hl=en-US"
    rel="canonical"
  />,
  <link
    href="https://tests.kohei.dev/?hl=ja-JP"
    hrefLang="ja-JP"
    rel="alternate"
  />,
  <link
    href="https://tests.kohei.dev/posts/feed.xml?hl=en-US"
    rel="alternate"
    title="Blog post Atom feed (en-US)"
    type="application/atom+xml"
  />,
  <script
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"Person","url":"https://tests.kohei.dev/?hl=en-US","name":"Kohei Asai","image":"https://tests.kohei.dev/profile.jpg","jobTitle":"Frontend Engineer","sameAs":["https://github.com/axross","https://linkedin.com/in/axross/","https://www.facebook.com/axrossio","https://www.instagram.com/axrossio/"]}
  </script>,
  <meta
    content="https://tests.kohei.dev/?hl=en-US"
    property="og:url"
  />,
  <meta
    content="profile"
    property="og:type"
  />,
  <meta
    content="Kohei Asai's personal website. My experience, projects and bloggging."
    property="og:description"
  />,
  <meta
    content="en-US"
    property="og:locale"
  />,
  <meta
    content="ja-JP"
    property="og:locale:alternate"
  />,
  <meta
    content="Kohei Asai"
    property="og:site_name"
  />,
  <meta
    content="Kohei Asai"
    property="og:title"
  />,
  <meta
    content="https://tests.kohei.dev/profile.jpg"
    property="og:image"
  />,
]
`;

exports[`<Head> when currentLocale="ja-JP" pushes tags into <head> and they matches with the previous snapshots 1`] = `
Array [
  <meta
    content="width=device-width"
    name="viewport"
  />,
  <meta
    charSet="utf-8"
  />,
  <link
    href="https://tests.kohei.dev/?hl=ja-JP"
    hrefLang="ja-JP"
    rel="alternate"
  />,
  <link
    href="https://tests.kohei.dev/posts/feed.xml?hl=en-US"
    rel="alternate"
    title="Blog post Atom feed (en-US)"
    type="application/atom+xml"
  />,
  <meta
    content="ja-JP"
    property="og:locale:alternate"
  />,
  <title>
    Kohei Asai
  </title>,
  <meta
    content="Kohei Asaiの個人ウェブサイト。経歴や活動状況、ブログなど。"
    name="description"
  />,
  <link
    href="https://tests.kohei.dev/?hl=ja-JP"
    rel="canonical"
  />,
  <link
    href="https://tests.kohei.dev/?hl=en-US"
    hrefLang="en-US"
    rel="alternate"
  />,
  <link
    href="https://tests.kohei.dev/posts/feed.xml?hl=ja-JP"
    rel="alternate"
    title="Blog post Atom feed (ja-JP)"
    type="application/atom+xml"
  />,
  <script
    type="application/ld+json"
  >
    {"@context":"https://schema.org","@type":"Person","url":"https://tests.kohei.dev/?hl=ja-JP","name":"Kohei Asai","image":"https://tests.kohei.dev/profile.jpg","jobTitle":"Frontend Engineer","sameAs":["https://github.com/axross","https://linkedin.com/in/axross/","https://www.facebook.com/axrossio","https://www.instagram.com/axrossio/"]}
  </script>,
  <meta
    content="https://tests.kohei.dev/?hl=ja-JP"
    property="og:url"
  />,
  <meta
    content="profile"
    property="og:type"
  />,
  <meta
    content="Kohei Asaiの個人ウェブサイト。経歴や活動状況、ブログなど。"
    property="og:description"
  />,
  <meta
    content="ja-JP"
    property="og:locale"
  />,
  <meta
    content="en-US"
    property="og:locale:alternate"
  />,
  <meta
    content="Kohei Asai"
    property="og:site_name"
  />,
  <meta
    content="Kohei Asai"
    property="og:title"
  />,
  <meta
    content="https://tests.kohei.dev/profile.jpg"
    property="og:image"
  />,
]
`;
